Updated Pastry Shop

--- a/src/app/buy-cake/buy-cake.component.html
+++ b/src/app/buy-cake/buy-cake.component.html
@@ -6,7 +6,7 @@
                     <img style="border-radius: 100px; ;" mat-card-sm-image [src]="pastry.img" alt="">
                 </div>
                     <h2>{{ pastry.name }}</h2>
-                    <p>{{ pastry.catergory }}</p>
+                    <p>{{ pastry.category }}</p>
                     <p>${{ pastry.price }}</p>
             </mat-card-content>
         </mat-card>
