--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-header [title]="title"></app-header>
 
-<router-outlet></router-outlet>
+<div class="main-content">
+   <router-outlet></router-outlet> 
+</div>
+
 <app-footer></app-footer>
