--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,5 +3,12 @@
     <img src="assets/Images/logo.jpg" alt="" />
     <p class="cake-title">{{ title }}</p>
   </div>
-  <a style="color:rgba(252, 252, 252, 0.758)" routerLink="/pastry-card"><mat-icon fontIcon="home"></mat-icon></a>
+  <div class="header-icons">
+    <a routerLink="/" matTooltip="Home">
+      <mat-icon fontIcon="home"></mat-icon>
+    </a>
+    <a routerLink="/cart" matTooltip="Cart">
+      <mat-icon fontIcon="shopping_cart"></mat-icon>
+    </a>
+  </div>
 </div>
